--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,8 @@
 cmake_minimum_required(VERSION 3.0.0)
 project(server VERSION 0.1.0)
 
+add_subdirectory ("Library")
+
 include(CTest)
 enable_testing()
 
